# ShipLog

./: .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  Makefile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 9242d7943715_initial_schema.py
apps/api/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
apps/api/app/consumers/: email_fanout.py  webhook_proc.py
apps/api/app/routers/: ai.py  auth.py  integrations.py  projects.py  releases.py  subscribers.py  webhooks.py  widget.py
apps/api/app/services/: ai.py  cache.py  crypto.py  email.py  github.py  publish.py  queue.py  render.py
apps/api/scripts/: smoke.py  smoke_ingest.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/projects/: page.tsx
apps/web/src/app/(dashboard)/projects/[projectId]/releases/: page.tsx
apps/web/src/app/(dashboard)/projects/[projectId]/releases/[releaseId]/: page.tsx
apps/web/src/app/(dashboard)/projects/[projectId]/releases/new/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/auth/: session.tsx
apps/web/src/components/projects/: create-project-dialog.tsx
apps/web/src/components/releases/: editor.tsx  markdown-preview.tsx  status-badge.tsx
apps/web/src/components/shell/: org-switcher.tsx  sidebar.tsx  topbar.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  textarea.tsx
apps/web/src/lib/: api.ts  types.ts  utils.ts
